<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_joystick_control</name>
  <version>0.0.1</version>
  <description>Controls the arm using a DualShock 4 or a Logitech F310 controller.</description>
  <maintainer email="helloarm@pm.me">Abhi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ds4_driver</depend>
  <depend>ds4_driver_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
